--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,25 @@
+body {
+  counter-reset: figure-counter table-counter formula-counter;
+}
+
+figure {
+  counter-increment: figure-counter;
+}
+
+figure figcaption::before {
+  content: "Figure " counter(figure-counter) ": ";
+  font-weight: bold;
+}
+
+table {
+  counter-increment: table-counter;
+}
+
+table caption::before {
+  content: "Table " counter(table-counter) ": ";
+  font-weight: bold;
+}
+
 .table-bordered {
   border: 1px solid #e9ecef;
 }
@@ -17,4 +39,24 @@
 
 .table-sm td, .table-sm th {
   padding: .3rem;
+}
+
+.formula {
+  counter-increment: formula-counter;
+  display: inline-block;
+  margin-bottom: 1em;
+}
+
+.formula span {
+  display: inline;
+}
+
+.formula figcaption::before {
+  content: "Formula " counter(formula-counter) ": ";
+  font-weight: bold;
+  display: inline;
+}
+
+.reference {
+  font-weight: bold;
 }
